--- a/hotel-api-model/pom.xml
+++ b/hotel-api-model/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.hotelbeds.hotel-api-sdk-java</groupId>
   <artifactId>hotel-api-model</artifactId>
   <name>HotelAPI Model</name>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <description>HotelAPI Accomodation distribution model</description>
   <dependencies>
     <dependency>
@@ -67,6 +67,9 @@
     </dependency>
   </dependencies>
   <build>
+    <!--
+    <sourceDirectory>target/generated-sources/delombok</sourceDirectory>
+    -->
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -87,6 +90,17 @@
       <plugin>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>4.1.0</version>
+        <extensions>true</extensions>
+        <configuration>
+            <instructions>
+                <_include>-osgi.bnd</_include>
+            </instructions>
+        </configuration>
       </plugin>
     </plugins>
   </build>
