--- a/hotel-content-model/pom.xml
+++ b/hotel-content-model/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.hotelbeds.hotel-api-sdk-java</groupId>
   <artifactId>hotel-content-model</artifactId>
   <name>Hotel Content Model</name>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <description>Hotel Content Data model</description>
   <dependencies>
     <!-- 
@@ -82,6 +82,17 @@
       <plugin>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>4.1.0</version>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <_include>-osgi.bnd</_include>
+          </instructions>
+        </configuration>
       </plugin>
     </plugins>
   </build>
